--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 aniso8601==4.1.0
-certifi==2018.11.29
+certifi==2019.3.9
 chardet==3.0.4
 Click==7.0
 Flask==1.0.2
@@ -7,11 +7,12 @@ Flask-RESTful==0.3.7
 Flask-WTF==0.14.2
 idna==2.8
 itsdangerous==1.1.0
-Jinja2==2.10
+Jinja2==2.10.1
 MarkupSafe==1.1.1
 pytz==2018.9
 requests==2.21.0
 six==1.12.0
 urllib3==1.24.1
 Werkzeug==0.14.1
+wincertstore==0.2
 WTForms==2.2.1
