Initial doc on the end points and how to use some of the internal team only functionality.

--- a/nas-status-doc/mkdocs.yml
+++ b/nas-status-doc/mkdocs.yml
@@ -33,4 +33,4 @@ markdown_extensions:
 nav:
   - Home: index.md
   - Maintain Status: maintain_status.md
-  - Add FAQs: maintain_faqs.md
+  - Add FAQs: add_faqs.md
