create notify_emails.json file if it doesn't exist in HTTP Get request to main status page as well and check for variable in html template.
Jinja2 exception occurs in if list_registered_emails dictionary doesn't exist, so now HTTP GET request creates the base file needed with the base JSON structure if the file doesn't exist. As a backup precaution template checks if the dictionary exists otherwise throws an alert-dialog indicating to contact SA3 core team.

--- a/.gitignore
+++ b/.gitignore
@@ -36,12 +36,12 @@ cmake-build-debug/
 out/
 .idea/
 *.iml
-#local_test_library
-container_status_app/local_test_library/copy_*
-container_status_app/local_test_library/backup_faq_data.json
-container_status_app/local_test_library/container_status.json
-container_status_app/local_test_library/upload_example.txt
-container_status_app/local_test_library/notify_emails_per_app.json
+container_status_app/local_test_library
+#container_status_app/local_test_library/copy_*
+#container_status_app/local_test_library/backup_faq_data.json
+#container_status_app/local_test_library/container_status.json
+#container_status_app/local_test_library/upload_example.txt
+#container_status_app/local_test_library/notify_emails_per_app.json
 
 # mpeltonen/sbt-idea plugin
 .idea_modules/
