--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,27 @@
 aniso8601==4.1.0
+blinker==1.4
 certifi==2019.3.9
 chardet==3.0.4
 Click==7.0
 Flask==1.0.2
+Flask-Mail==0.9.1
 Flask-RESTful==0.3.7
 Flask-WTF==0.14.2
 idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10.1
+livereload==2.6.0
+Markdown==3.1
 MarkupSafe==1.1.1
+mkdocs==1.0.4
+mkdocs-material==4.1.2
+Pygments==2.3.1
+pymdown-extensions==6.0
 pytz==2018.9
+PyYAML==5.1
 requests==2.21.0
 six==1.12.0
+tornado==6.0.2
 urllib3==1.24.1
 Werkzeug==0.14.1
 wincertstore==0.2
